--- a/wsn-server.service
+++ b/wsn-server.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=wsn-server
 After=network-online.target
-Requires=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=simple
